// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidUntil /> should render '15 hours ago' 1`] = `
<span
  title="2018-12-30 22:40:44"
>
  15 hours ago
</span>
`;

exports[`<ValidUntil /> should render 'N/A' 1`] = `
<span>
  N/A
</span>
`;

exports[`<ValidUntil /> should render 'any time now' 1`] = `
<span
  title="2019-01-01 02:27:24"
>
  any time now
</span>
`;
